Separate on datatypes: weight, waist, hips

--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -2,4 +2,7 @@
 <resources>
     <string name="app_name">memorize</string>
     <string name="DelButtonCaption">Delete record</string>
+    <string name="weight_button">Вес</string>
+    <string name="weist_button">Объём талии</string>
+    <string name="hips_button">Объём бедер</string>
 </resources>
