- refactoring in editor

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -9,4 +9,7 @@
     <string name="label_editor">редактор</string>
     <string name="label_import">Import</string>
     <string name="label_add_custom_measure">Add Custom</string>
+    <string name="label_select_operation">Select operation</string>
+    <string name="label_edit">Edit</string>
+    <string name="label_cancel">Cancel</string>
 </resources>
