--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
     <string name="label_export">Export</string>
     <string name="label_add_custom_measure">Add Custom</string>
     <string name="label_remove_all">Remove All</string>
+    <string name="label_select_operation">Select operation</string>
+    <string name="label_edit">Edit</string>
+    <string name="label_delete">Delete</string>
+    <string name="label_cancel">Cancel</string>
 </resources>
