- working on import\export data

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -12,4 +12,6 @@
     <string name="label_select_operation">Select operation</string>
     <string name="label_edit">Edit</string>
     <string name="label_cancel">Cancel</string>
+    <string formatted="false" name="toast_exported_error">Export error: %s</string>
+    <string formatted="false" name="toast_exported">Exported all data to %s in downloads folder. Total count %s</string>
 </resources>
