--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="label_remove_all">Remove All</string>
     <string name="label_select_operation">Select operation</string>
     <string name="label_edit">Edit</string>
-    <string name="label_delete">Delete</string>
+    <string name="label_remove">Remove</string>
     <string name="label_cancel">Cancel</string>
     <string formatted="false" name="toast_exported">All data has been exported to \"%s\" in downloads folder. Number of entities %s.</string>
     <string formatted="false" name="toast_exported_error">Export error: %s</string>
@@ -26,5 +26,6 @@
     <string name="label_import_successful">Import successfull, %s new entities.</string>
     <string name="label_alert">Alert</string>
     <string name="remove_all_confirmation">You about to delete all data, are you sure?</string>
-    <string name="remove_all_end">Removed all %s entities</string>
+    <string name="remove_all_end">Removed all %s entities.</string>
+    <string name="label_remove_successful">Measurement: %s removed.</string>
 </resources>
