- working on BMI

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -43,4 +43,5 @@
     <string name="lifestyle_normal">Normal</string>
     <string name="lifestyle_passive">Passive</string>
     <string name="lifestyle">Lifestyle</string>
+    <string name="bmi">BMI</string>
 </resources>
