--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="lifestyle_passive">Passive</string>
     <string name="lifestyle">Lifestyle</string>
     <string name="bmi">BMI</string>
+    <string name="meals">Meals</string>
 </resources>
