- working on meals table

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -45,4 +45,9 @@
     <string name="lifestyle">Lifestyle</string>
     <string name="bmi">BMI</string>
     <string name="meals">Meals</string>
+    <string name="meal">Meal</string>
+    <string name="proteins">Proteins</string>
+    <string name="fats">Fats</string>
+    <string name="carbs">Carbs</string>
+    <string name="calories">Calories</string>
 </resources>
