--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -50,4 +50,9 @@
     <string name="fats">Fats</string>
     <string name="carbs">Carbs</string>
     <string name="calories">Calories</string>
+    <string name="tiffin">Tiffin</string>
+    <string name="dinner">Dinner</string>
+    <string name="breakfast">Breakfast</string>
+    <string name="afternoon_snack">Afternoon Snack</string>
+    <string name="lunch">Lunch</string>
 </resources>
