--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="breakfast">Breakfast</string>
     <string name="afternoon_snack">Afternoon Snack</string>
     <string name="lunch">Lunch</string>
+    <string name="totals">Totals</string>
 </resources>
