--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -30,30 +30,33 @@
     <string name="remove_all_confirmation">Вы хотите удалить все записи из всех категорий?</string>
     <string name="remove_all_end">Удалены все %s записи.</string>
     <string name="waist">талия</string>
-    <string name="weight">вес</string>
-    <string name="profile">Profile</string>
-    <string name="diet">Diet</string>
+    <string name="weight">Вес(кг)</string>
+    <string name="profile">Профиль</string>
+    <string name="diet">Диета</string>
     <string name="memorize">Memorize</string>
-    <string name="age">Age</string>
-    <string name="gender">Gender</string>
-    <string name="man">Man</string>
-    <string name="woman">Woman</string>
-    <string name="height">Height</string>
-    <string name="lifestyle_active">Active</string>
-    <string name="lifestyle_normal">Normal</string>
-    <string name="lifestyle_passive">Passive</string>
-    <string name="lifestyle">Lifestyle</string>
-    <string name="bmi">BMI</string>
-    <string name="meals">Meals</string>
-    <string name="meal">Meal</string>
-    <string name="proteins">Proteins</string>
-    <string name="fats">Fats</string>
-    <string name="carbs">Carbs</string>
-    <string name="calories">Calories</string>
-    <string name="tiffin">Tiffin</string>
-    <string name="dinner">Dinner</string>
-    <string name="breakfast">Breakfast</string>
-    <string name="afternoon_snack">Afternoon Snack</string>
-    <string name="lunch">Lunch</string>
-    <string name="totals">Totals</string>
+    <string name="age">Возраст</string>
+    <string name="gender">Пол</string>
+    <string name="man">Мужчина</string>
+    <string name="woman">Женщина</string>
+    <string name="height">Рост(см)</string>
+    <string name="lifestyle_active">Тяжелая физ. работа</string>
+    <string name="lifestyle_normal">Умеренная физ. акт.</string>
+    <string name="lifestyle_passive">Малоподвижный</string>
+    <string name="lifestyle">Образ жизни</string>
+    <string name="bmi">ИМТ</string>
+    <string name="meals">Приемы пищи</string>
+    <string name="meal">Прием пищи</string>
+    <string name="proteins">Протеины(г)</string>
+    <string name="fats">Жиры(г)</string>
+    <string name="carbs">Углеводы(г)</string>
+    <string name="calories">Калории</string>
+    <string name="tiffin">Второй Завтрак</string>
+    <string name="dinner">Ужин</string>
+    <string name="breakfast">Завтрак</string>
+    <string name="afternoon_snack">Полдник</string>
+    <string name="lunch">Обед</string>
+    <string name="totals">Всего</string>
+    <string name="add_new_product">+ Добавить новый продукт</string>
+    <string name="weight_g">Вес(г)</string>
+    <string name="product">Продукт</string>
 </resources>
