- working on product creating

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -59,4 +59,5 @@
     <string name="add_new_product">+ Добавить новый продукт</string>
     <string name="weight_g">Вес(г)</string>
     <string name="product">Продукт</string>
+    <string name="new_product_default_name">New Product</string>
 </resources>
