- add delete alert; - hide toolbar

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -60,4 +60,5 @@
     <string name="weight_g">Вес(г)</string>
     <string name="product">Продукт</string>
     <string name="new_product_default_name">New Product</string>
+    <string name="delete_product">Delete product</string>
 </resources>
